external-crates/move/crates/move-compiler/tests/move_check/typing/abort_any_type.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04039]: unable to determine princiapl type for literal
  ┌─ tests/move_check/typing/abort_any_type.move:5:9
  │
5 │         0 + (abort 0);
  │         ^ Could not determine a concrete type for this numeric literal, so defaulting to 'u64'
  │
  = To avoid this warning, add an explicit type annotation, e.g., '0u64' or '0 as u64'

warning[W09005]: dead or unreachable code
  ┌─ tests/move_check/typing/abort_any_type.move:5:14
  │
5 │         0 + (abort 0);
  │              ^^^^^^^ Expected a value. Any code surrounding or after this expression will not be reached
  │
  = This warning can be suppressed with '#[allow(dead_code)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09005]: dead or unreachable code
  ┌─ tests/move_check/typing/abort_any_type.move:9:13
  │
9 │         foo(abort 0);
  │             ^^^^^^^ Expected a value. Any code surrounding or after this expression will not be reached
  │
  = This warning can be suppressed with '#[allow(dead_code)]' applied to the 'module' or module member ('const', 'fun', or 'struct')
